...
                Button(
                    onClick = {
                        result = state.selectedDate?.toString()
                        showDialog = false
                    },
                    enabled = state.selectedDate != null,
                ) { Text("OK") }
            },
            dismissButton = { Button(onClick = { showDialog = false }) { Text("Cancel") } },
            state = state,
        )
    }
}

@Composable
...
